--- a/tests/integrations/vllm_plugin/generative/test_config/model_configs.yaml
+++ b/tests/integrations/vllm_plugin/generative/test_config/model_configs.yaml
@@ -338,22 +338,35 @@ model_configs:
     model: BAAI/Aquila-7B
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
+  vllm_sweep_apertus:
+    model: swiss-ai/Apertus-8B-2509
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   vllm_sweep_aquila_chat:
     model: BAAI/AquilaChat-7B
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
+  vllm_sweep_arcee:
+    model: arcee-ai/AFM-4.5B-Base
+    marks: [vllm_sweep]
   vllm_sweep_baichuan:
     model: baichuan-inc/Baichuan-7B
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_bailing_moe:
+    model: inclusionAI/Ling-lite-1.5
+    marks: [vllm_sweep]
+  vllm_sweep_bailing_moe_v2:
+    model: inclusionAI/Ling-mini-2.0
+    marks: [vllm_sweep]
+  vllm_sweep_bamba:
+    model: ibm-ai-platform/Bamba-9B
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
   vllm_sweep_bloom:
     model: bigscience/bloom-560m
     status: "known_failure_xfail"
     reason: "Alibi slopes is not supported."
-  vllm_sweep_bart:
-    model: facebook/bart-base
-    status: "known_failure_xfail"
-    reason: "Model architecture BartModel was supported in vLLM until v0.10.2, and is not supported anymore."
   vllm_sweep_chat_glm2:
     model: THUDM/chatglm2-6b
     status: "known_failure_xfail"
@@ -366,6 +379,9 @@ model_configs:
     model: CohereForAI/c4ai-command-r-v01
     status: "known_failure_xfail"
     reason: "Unknown failure"
+  vllm_sweep_cohere2:
+    model: CohereLabs/c4ai-command-r7b-12-2024
+    marks: [vllm_sweep]
   vllm_sweep_dbrx:
     model: Undi95/dbrx-base
     status: "known_failure_xfail"
@@ -380,12 +396,6 @@ model_configs:
     model: deepseek-ai/deepseek-llm-7b-chat
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
-  # vllm_sweep_deepseekcoder:
-  #   model: deepseek-ai/deepseek-coder-1.3b-instruct
-  #   max_model_len: 256
-  #   max_num_batched_tokens: 256
-  #   gpu_memory_utilization: 0.005
-  #   marks: [vllm_sweep]
   vllm_sweep_deepseekv2:
     model: deepseek-ai/DeepSeek-V2
     max_model_len: 64
@@ -398,10 +408,38 @@ model_configs:
     max_num_batched_tokens: 64
     status: "known_failure_xfail"
     reason: "TypeError: TTAttentionBackendImpl.__init__() got an unexpected keyword argument 'q_lora_rank'"
-  vllm_sweep_exaone:
+  vllm_sweep_dots1:
+    model: rednote-hilab/dots.llm1.base
+    marks: [vllm_sweep]
+  vllm_sweep_dots_ocr:
+    model: rednote-hilab/dots.ocr
+    marks: [vllm_sweep]
+  vllm_sweep_ernie4_5:
+    model: baidu/ERNIE-4.5-0.3B-PT
+    marks: [vllm_sweep]
+  vllm_sweep_ernie4_5_moe:
+    model: baidu/ERNIE-4.5-21B-A3B-PT
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_exaone3:
     model: LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct
     status: "known_failure_xfail"
     reason: "Gated huggingface model" # Need to agree to terms to access
+  vllm_sweep_exaone4:
+    model: LGAI-EXAONE/EXAONE-4.0-32B
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_fairseq2_llama:
+    model: mgleize/fairseq2-dummy-Llama-3.2-1B
+    marks: [vllm_sweep]
+  vllm_sweep_falcon_h1:
+    model: tiiuae/Falcon-H1-34B-Base
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_flex_olmo:
+    model: allenai/FlexOlmo-7x7B-1T
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   # vllm_sweep_falcon:
   #   model: tiiuae/falcon-7b
   #   marks: [vllm_sweep]
@@ -415,14 +453,31 @@ model_configs:
   # vllm_sweep_gemma2:
   #   model: google/gemma-2-2b
   #   marks: [vllm_sweep]
+  vllm_sweep_gemma3:
+    model: google/gemma-3-1b-it
+    marks: [vllm_sweep]
+  vllm_sweep_gemma3n:
+    model: google/gemma-3n-E2B-it
+    marks: [vllm_sweep]
   vllm_sweep_glm:
     model: THUDM/glm-4-9b-chat-hf
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
+  vllm_sweep_glm4:
+    model: zai-org/GLM-4-32B-0414
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_glm4_moe:
+    model: zai-org/GLM-4.5
+    marks: [vllm_sweep]
   vllm_sweep_gpt2:
     model: gpt2
     status: "known_failure_xfail"
     reason: "'GPT2LMHeadModel' object has no attribute 'model'"
+  vllm_sweep_gpt_oss:
+    model: openai/gpt-oss-20b
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   vllm_sweep_gptbigcode: # TEST NEXT locally
     model: bigcode/starcoder
     status: "known_failure_xfail"
@@ -442,10 +497,29 @@ model_configs:
     model: ibm-granite/granite-3.0-1b-a400m-base
     status: "known_failure_xfail"
     reason: "'_OpNamespace' '_moe_C' object has no attribute 'topk_softmax'"
+  vllm_sweep_granite_moe_hybrid:
+    model: ibm-granite/granite-4.0-tiny-preview
+    marks: [vllm_sweep]
+  vllm_sweep_granite_moe_shared:
+    model: ibm-research/moe-7b-1b-active-shared-experts
+    marks: [vllm_sweep]
   vllm_sweep_gritlm:
     model: parasail-ai/GritLM-7B-vllm
     status: "known_failure_xfail"
     reason: "ZeroDivisionError: integer division or modulo by zero"
+  vllm_sweep_grok1:
+    model: hpcai-tech/grok-1
+    marks: [vllm_sweep]
+  vllm_sweep_hunyuan_dense: 
+    model: tencent/Hunyuan-7B-Instruct
+    marks: [vllm_sweep]
+  vllm_sweep_hunyuan_moe:
+    model: tencent/Hunyuan-A13B-Instruct 
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_hcx_vision:
+    model: naver-hyperclovax/HyperCLOVAX-SEED-Vision-Instruct-3B
+    marks: [vllm_sweep]
   vllm_sweep_internlm:
     model: internlm/internlm-7b
     status: "known_failure_xfail"
@@ -458,23 +532,44 @@ model_configs:
     model: internlm/internlm3-8b-instruct
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
-  # vllm_sweep_jais:
-  #   model: inceptionai/jais-13b
-  #   max_model_len: 64
-  #   max_num_batched_tokens: 64
-  #   marks: [vllm_sweep]
+  vllm_sweep_jais:
+    model: inceptionai/jais-13b 
+    max_model_len: 64
+    max_num_batched_tokens: 64
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_jais2:
+    model: inceptionai/Jais-2-8B-Chat
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   vllm_sweep_jamba: # need to agree to terms to access
     model: ai21labs/AI21-Jamba-Mini-1.5
     status: "known_failure_xfail"
     reason: "Gated huggingface model"
+  vllm_sweep_kimi_linear:
+    model: moonshotai/Kimi-Linear-48B-A3B-Base
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_lfm2:
+    model: LiquidAI/LFM2-350M
     marks: [vllm_sweep]
+  vllm_sweep_lfm2_moe:
+    model: LiquidAI/LFM2-8B-A1B-preview
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   # vllm_sweep_llama:
   #   model: meta-llama/Llama-3.2-1B
   #   marks: [vllm_sweep]
+  vllm_sweep_longcat_flash:
+    model: meituan-longcat/LongCat-Flash-Chat
+    marks: [vllm_sweep]
   vllm_sweep_mamba:
     model: state-spaces/mamba-130m-hf
     status: "known_failure_xfail"
     reason: "ZeroDivisionError: integer division or modulo by zero"
+  vllm_sweep_mamba2:
+    model: mistralai/Mamba-Codestral-7B-v0.1
+    marks: [vllm_sweep]
   vllm_sweep_minicpm:
     model: openbmb/MiniCPM-2B-sft-bf16
     gpu_memory_utilization: 0.004
@@ -483,6 +578,18 @@ model_configs:
     model: openbmb/MiniCPM3-4B
     status: "known_failure_xfail"
     reason: "torch._dynamo.exc.TorchRuntimeError: Dynamo failed to run FX node with fake tensors: call_method view(*(FakeTensor(..., device='xla:0', size=(0, 32)), 0, -1, 32), **{}): got RuntimeError('cannot reshape tensor of 0 elements into shape [0, -1, 32] because the unspecified dimension size -1 can be any value and is ambiguous')"
+  vllm_sweep_mimo:
+    model: XiaomiMiMo/MiMo-7B-RL
+    marks: [vllm_sweep]
+  vllm_sweep_minimax_m1:
+    model: MiniMaxAI/MiniMax-M1-40k
+    marks: [vllm_sweep]
+  vllm_sweep_minimax_m2:
+    model: MiniMaxAI/MiniMax-M2
+    marks: [vllm_sweep]
+  vllm_sweep_minimax_text01:
+    model: MiniMaxAI/MiniMax-Text-01
+    marks: [vllm_sweep]
   # vllm_sweep_mistral:
   #   model: mistralai/Mistral-7B-v0.1
   #   gpu_memory_utilization: 0.001
@@ -490,6 +597,9 @@ model_configs:
   #   max_num_batched_tokens: 64
   #   prompts:
   #   - The future of AI is
+  #   marks: [vllm_sweep]
+  # vllm_sweep_mistral_large3:
+  #   model: mistralai/Mistral-Large-3-675B-Base-2512
   #   marks: [vllm_sweep]
   # vllm_sweep_mixtral:
   #   model: mistralai/Mixtral-8x7B-v0.1
@@ -504,6 +614,10 @@ model_configs:
     model: nvidia/Minitron-8B-Base
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
+  vllm_sweep_nemotron_h:
+    model: nvidia/Nemotron-H-8B-Base-8K
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   vllm_sweep_olmo:
     model: allenai/OLMo-1B-hf
     status: "expected_passing"
@@ -511,10 +625,16 @@ model_configs:
     model: allenai/OLMo2-7B-1124
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
+  vllm_sweep_olmo3:
+    model: allenai/Olmo-3-7B-Instruct
+    marks: [vllm_sweep]
   vllm_sweep_olmoe:
     model: allenai/OLMoE-1B-7B-0924
     status: "known_failure_xfail"
     reason: "'_OpNamespace' '_moe_C' object has no attribute 'topk_softmax'"
+  vllm_sweep_ouro:
+    model: ByteDance/Ouro-1.4B
+    marks: [vllm_sweep]
   # vllm_sweep_opt:
   #   model: facebook/opt-125m
   #   marks: [vllm_sweep]
@@ -522,6 +642,12 @@ model_configs:
   #   model: OrionStarAI/Orion-14B-Base
   #   max_model_len: 64
   #   max_num_batched_tokens: 64
+  #   marks: [vllm_sweep]
+  vllm_sweep_pangu_embedded:
+    model: FreedomIntelligence/openPangu-Embedded-7B-V1.1
+    marks: [vllm_sweep]
+  # vllm_sweep_pangu_ultra_moe:
+  #   model: FreedomIntelligence/openPangu-Ultra-MoE-718B-V1.1
   #   marks: [vllm_sweep]
   # vllm_sweep_phi:
   #   model: microsoft/phi-2
@@ -543,6 +669,12 @@ model_configs:
   # vllm_sweep_phimoe:
   #   model: microsoft/Phi-3.5-MoE-instruct
   #   marks: [vllm_sweep]
+  vllm_sweep_plamo2:
+    model: pfnet/plamo-2-1b
+    marks: [vllm_sweep]
+  vllm_sweep_plamo3:
+    model: pfnet/plamo-3-nict-2b-base
+    marks: [vllm_sweep]
   vllm_sweep_persimmon:
     model: adept/persimmon-8b-base
     status: "known_failure_xfail"
@@ -559,10 +691,26 @@ model_configs:
     model: Qwen/Qwen1.5-MoE-A2.7B
     status: "known_failure_xfail"
     reason: "RuntimeError: !at::functionalization::impl::isFunctionalTensor(t) INTERNAL ASSERT FAILED at '/pytorch/aten/src/ATen/FunctionalTensorWrapper.cpp':850, please report a bug to PyTorch. The composite op functionalization fallback expects its inputs all not to be functional tensors"
+  vllm_sweep_qwen3:
+    model: Qwen/Qwen3-8B
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_qwen3_moe:
+    model: Qwen/Qwen3-30B-A3B
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
+  vllm_sweep_qwen3_next:
+    model: Qwen/Qwen3-Next-80B-A3B-Instruct
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   vllm_sweep_stablelm:
     model: stabilityai/stablelm-3b-4e1t
     gpu_memory_utilization: 0.004
     status: "expected_passing"
+  vllm_sweep_seed_oss:
+    model: ByteDance-Seed/Seed-OSS-36B-Instruct
+    status: "known_failure_xfail"
+    reason: "Model is too large for single chip"
   vllm_sweep_starcoder2:
     model: bigcode/starcoder2-3b
     status: "expected_passing"
@@ -570,11 +718,16 @@ model_configs:
     model: upstage/solar-pro-preview-instruct
     status: "known_failure_xfail"
     reason: "Model is too large for single chip"
-  vllm_sweep_telechat:
-    model: chuhac/TeleChat2-3B
-    status: "known_failure_xfail"
-    reason: "Gated huggingface model"
+  vllm_sweep_telechat2:
+    model: Tele-AI/TeleChat2-3B
+    marks: [vllm_sweep]
+  # vllm_sweep_tele_flm:
+  #   model: CofeAI/FLM-2-52B-Instruct-2407
+  #   marks: [vllm_sweep]
   vllm_sweep_xverse:
     model: xverse/XVERSE-7B-Chat
     status: "known_failure_xfail"
     reason: "Exception: add_prefix_space does not match declared prepend_scheme at line 78 column 3"
+  vllm_sweep_zamba2:
+    model: Zyphra/Zamba2-1.2B-instruct
+    marks: [vllm_sweep]
