--- a/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
@@ -27,9 +27,8 @@ test_config:
 
   falcon/jax-3_1B_Base-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.066 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   falcon/jax-3_3B_Base-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -39,43 +38,34 @@ test_config:
 
   qwen_2_5/causal_lm/jax-0.5B-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.011 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5/causal_lm/jax-0.5B_Instruct-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.036 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5/causal_lm/jax-1.5B-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 34359738368 B DRAM buffer across 12 banks, where each bank needs to store 2863312896 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
-    markers: [large]
 
   qwen_2_5/causal_lm/jax-1.5B_Instruct-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.019 < 0.99 required"
-    markers: [large]
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5/causal_lm/jax-3B-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.0005 < 0.99 required"
-    markers: [large]
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5/causal_lm/jax-3B_Instruct-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.001 < 0.99 required"
-    markers: [large]
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5/causal_lm/jax-7B-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -91,35 +81,28 @@ test_config:
 
   qwen_2_5_coder/causal_lm/jax-0.5B-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.0073 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5_coder/causal_lm/jax-1.5B-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.054 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5_coder/causal_lm/jax-1.5B_Instruct-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.025 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5_coder/causal_lm/jax-3B-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.012 < 0.99 required"
-    markers: [large]
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5_coder/causal_lm/jax-3B_Instruct-tensor_parallel-inference:
     supported_archs: ["n300"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.004 < 0.99 required"
-    markers: [large]
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_2_5_coder/causal_lm/jax-7B-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -135,21 +118,18 @@ test_config:
 
   qwen_3/causal_lm/jax-0_6B-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.018 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_3/causal_lm/jax-1_7B-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.004 < 0.99 required. n300 OOM"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   qwen_3/causal_lm/jax-4B-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.0005 < 0.99 required. n300 OOM"
+    status: NOT_SUPPORTED_SKIP
+    reason: "transformers 5.x removed jax TensorType support - return_tensors='jax' no longer valid"
 
   mnist/image_classification/jax-Mlp_Custom_1x2-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -199,49 +179,25 @@ test_config:
     assert_pcc: false
     reason: "Severe PCC comparison failed: pcc=0.144 < 0.99 required"
 
-  mamba/causal_lm/jax-mamba-370m-hf-tensor_parallel-inference:
-    supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL
-    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
-
-  mamba/causal_lm/jax-mamba-790m-hf-tensor_parallel-inference:
-    supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL
-    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
-
-  mamba/causal_lm/jax-mamba-2.8b-hf-tensor_parallel-inference:
-    supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL
-    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
-
-  mamba/causal_lm/jax-mamba-1.4b-hf-tensor_parallel-inference:
-    supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL
-    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
-
   phi1/causal_lm/jax-Phi_1-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.01 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "EasyDel incompatible with transformers 5.x - PhiConfig missing pad_token_id attribute"
 
   phi1_5/causal_lm/jax-Phi_1_5-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.006 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "EasyDel incompatible with transformers 5.x - PhiConfig missing pad_token_id attribute"
 
   phi2/causal_lm/jax-Phi_2-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.012 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "EasyDel incompatible with transformers 5.x - PhiConfig missing pad_token_id attribute"
 
   phi2/causal_lm/jax-Phi_2_Pytdml-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.012 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "EasyDel incompatible with transformers 5.x - PhiConfig missing pad_token_id attribute"
 
   phi3/causal_lm/jax-Phi_3_Mini_128K_Instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
